--- a/entregaFinal/src/views/products.handlebars
+++ b/entregaFinal/src/views/products.handlebars
@@ -1,21 +1,37 @@
-<h1> Productos </h1>
-{{#each products}}
-    <div>
-        <h2>{{title}}</h2>
-        <p> {{_id}} </p>
-        <p>{{description}}</p>
-        <p>Price: ${{price}}</p>
-        <p>Category: {{category}} </p>
-        <button> Agregar al Carrito </button>
-    </div>
-{{/each}}
+<h1 class="text-center text-primary"> Productos </h1>
 
+<div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center justify-content-md-between g-2">
+    {{#each products}}
+        <div class="col col-card m-2 p-2">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{title}}</h5>
+                    <p class="card-text">{{_id}}</p>
+                    <p class="card-text">{{description}}</p>
+                    <p class="card-text">Price: ${{price}}</p>
+                    <p class="card-text">{{category}}</p>
+                    <div class="text-center">
+                        <button class="btn btn-primary btn-md btn-card m2 p-2"> Agregar al Carrito </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+</div>
+</div>
 
-{{#if hasNextPage}}
-    <a href="/products?page={{nextPage}}"> Siguiente </a>
-{{/if}}
-{{#if hasPrevPage}}
-    <a href="/products?page={{prevPage}}"> Anterior </a>
-{{/if}}
-
-<p>Pagina {{currentPage}} de {{totalPages}} </p>
+<div class="m-2 p-2">
+    <nav aria-label="Page navigation ecommerce" class="m-2 p-2">
+        <ul class="pagination justify-content-center">
+            {{#if hasPrevPage}}
+                <li class="page-item"><a class="page-link" href="/products?page={{prevPage}}">Anterior</a></li>
+            {{/if}}
+            <li class="page-item"><a class="page-link" href="#">Pagina {{currentPage}} de {{totalPages}}</a></li>
+            {{#if hasNextPage}}
+                <li class="page-item"><a class="page-link" href="/products?page={{nextPage}}">Siguiente</a></li>
+            {{/if}}
+        </ul>
+    </nav>
+</div>
