--- a/preEntrega/src/views/home.handlebars
+++ b/preEntrega/src/views/home.handlebars
@@ -4,9 +4,13 @@
     <button class="btn" type="submit">Logout</button>
 </form>
 
+<div>
+    <h1>Bienvenido, {{user.email}} !! </h1>
+</div>
+
 <div id="products" class="container m-4">
     <div class="row">
-        {{#each products}}
+        {{#each newArray}}
             <div class="col-3 my-2">
                 <ul class="list-group my-2">
                     <li class="list-group-item">{{this.title}}</li>
@@ -15,7 +19,7 @@
                     <li class="list-group-item">{{this.price}}</li>
                     <li class="list-group-item">{{this.status}}</li>
                     <li class="list-group-item">{{this.stock}}</li>
-                    <li class="list-group-item">{{this.thumbnail}}</li>
+                    <li class="list-group-item">{{this.thumbnails}}</li>
                 </ul>
             </div>
         {{/each}}
