--- a/preEntrega/src/views/login.handlebars
+++ b/preEntrega/src/views/login.handlebars
@@ -1,9 +1,9 @@
 <form action="/api/sessions/login" method="POST">
-    <label for="email"> Email: </label>
-    <input type="email" required name="email">
+    <label for="user"> Email: </label>
+    <input type="email" required name="user">
 
     <label for="password"> Password: </label>
-    <input type="text" name="password" required>
+    <input type="password" name="password" required>
 
     <button class="btn" type="submit"> Login </button>
 </form>
