--- a/preEntrega/src/views/register.handlebars
+++ b/preEntrega/src/views/register.handlebars
@@ -9,7 +9,7 @@
     <input type="email" name="email" required>
 
     <label for="password"> Password: </label>
-    <input type="text" name="password" required>
+    <input type="password" name="password" required>
 
     <label for="age">Age: </label>
     <input type="number" name="age" required>
